app/assets/stylesheets/bills.scss
.bill-container {
  margin-top: 20px;
}



.display-messages {
  margin-top: 15px;
}

.bill-navigation {
  display: flex;

  a.active,
  a.active:hover {
    background: #1ea0f5;
    color: white;

  }

  a:hover {
    background: #cb0033;
    color: white;
  }

  .navigation-element{

    border-left: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    text-decoration: none;
    width: 25%;
  }
}

.bill-navigation.shop-navigation .navigation-element{
  width: 50%;
}


// Waiting for AJAX call loader.
.loader {
  border: 16px solid  rgba(5,111,242, 0.2);
  border-radius: 50%;
  border-top: 16px solid #056ff2;
  width: 120px;
  height: 120px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

// A minor padding in totals displayed in same row with elements per page
#total.total-amount {
  padding: 0.5rem 0;
}

//Query for larger than tablet displays
@media (min-width: 768px){
  .bill-navigation {
    font-size: 3em;
  }

  .shop-navigation {
    font-size: 2em;
  }
}

//Query for tablet and lower displays
@media (max-width: 767px) {
  .bill-navigation {
    font-size: 1.5em;
  }

  .shop-navigation {
    font-size: 1em;
  }
}

